--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     I'm A Student.
                 </h1>
                 <p>
-                    I'm a Student, On a journey to become an IT proffesional.
+                    I'm a Student, On a journey to become an IT professional.
                     I'm Also a traveller and a moto-Enthusiast :)
                 </p>
                 <div class="btn-con">
@@ -50,7 +50,7 @@
                     <p>
                         I'm a student pursuing Master of computer applications at RNSIT.
                         I have done my bachelors in Computer Applications. I'm a computer science enthusiast who
-                        wants to persue a carrer in The information technology field. Apart from this 
+                        wants to persue a career in The information technology field. Apart from this 
                         I'm a travel Ensthusiast who loves to explore new places and enjoys riding & driving .
                     </p>
                     <div class="btn-con">
