--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hey, This is </br><span>Ashwin Aithal R.</span>
+                    Hey, This is </br><span>Ashwin Aithal.</span>
                     </br>
                     I'm A Student.
                 </h1>
